Bug fix for buttons no wrap texts.

--- a/less/modules/buttons.less
+++ b/less/modules/buttons.less
@@ -48,7 +48,7 @@
         }
 
         &:not(.ui-border):not([class*="ui-border-"]) { border-width: 0; }
-        &:not(.ui-btn-multi) { white-space: nowrap; }
+        &:not(.ui-btn-multi) { white-space: nowrap; overflow: hidden; }
 
         &:not(.ui-circle) { padding-right: (@btn-default-padding + @btn-default-extra-padding); padding-left: (@btn-default-padding + @btn-default-extra-padding); }
         &.ui-circle { padding-right: (@btn-default-padding + @btn-circle-extra-padding); padding-left: (@btn-default-padding + @btn-circle-extra-padding); }
